<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/nav_dashboard"
        android:icon="@drawable/ic_dashboard"
        android:title="@string/dashboard_title" />
    <item
        android:id="@+id/nav_printer"
        android:icon="@drawable/ic_printer"
        android:title="@string/printer_title" />
    <item
        android:id="@+id/nav_queue"
        android:icon="@drawable/ic_queue"
        android:title="@string/queue_title" />
    <item
        android:id="@+id/nav_logs"
        android:icon="@drawable/ic_logs"
        android:title="@string/logs_title" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings_title" />
</menu>